codegen/ui_tests/rhai_fn_rename_collision.stderr
error: duplicate Rhai signature for 'foo'
  --> ui_tests/rhai_fn_rename_collision.rs:17:15
   |
17 |     #[rhai_fn(name = "foo")]
   |               ^^^^

error: duplicated function renamed 'foo'
  --> ui_tests/rhai_fn_rename_collision.rs:12:15
   |
12 |     #[rhai_fn(name = "foo")]
   |               ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_rename_collision.rs:28:8
   |
28 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
